[gd_scene load_steps=8 format=2]

[ext_resource path="res://src/entities/controllers/asteroid_spawner/AsteroidSpawner.tscn" type="PackedScene" id=1]
[ext_resource path="res://src/entities/actors/player/Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/scenes/tests/Gameplay01/GameController.gd" type="Script" id=3]

[sub_resource type="SegmentShape2D" id=1]
b = Vector2( 800, 0 )

[sub_resource type="SegmentShape2D" id=2]
b = Vector2( 0, 800 )

[sub_resource type="SegmentShape2D" id=3]
a = Vector2( 800, 0 )
b = Vector2( 800, 600 )

[sub_resource type="SegmentShape2D" id=4]
a = Vector2( 0, 600 )
b = Vector2( 800, 600 )

[node name="Main" type="Node2D"]
script = ExtResource( 3 )

[node name="Boundaries" type="StaticBody2D" parent="."]
collision_layer = 2
collision_mask = 0

[node name="UpperBoundary" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource( 1 )

[node name="LeftBoundary" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource( 2 )

[node name="RightBoundary" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource( 3 )

[node name="LowerBoundary" type="CollisionShape2D" parent="Boundaries"]
shape = SubResource( 4 )

[node name="StartTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AsteroidSpawner" parent="." instance=ExtResource( 1 )]
position = Vector2( 410.981, -64 )
position_end = Vector2( 800, 0 )
linear_velocity_start = Vector2( 0, 20 )
linear_velocity_end = Vector2( 0, 200 )
wave_count = 20

[node name="Player" parent="." instance=ExtResource( 2 )]
position = Vector2( 410.981, 472.114 )
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
